tests/rosetta/out/Java/anagrams-deranged-anagrams.error
javac error: exit status 1
/tmp/TestMochiToJavaanagrams-deranged-anagrams1873416534/001/AnagramsDerangedAnagrams.java:19: error: incompatible types: String cannot be converted to List<String>
                    List<String> tmp = arr.get(j);
                                              ^
/tmp/TestMochiToJavaanagrams-deranged-anagrams1873416534/001/AnagramsDerangedAnagrams.java:21: error: incompatible types: List<String> cannot be converted to String
                    arr.set(j + 1, tmp);
                                   ^
/tmp/TestMochiToJavaanagrams-deranged-anagrams1873416534/001/AnagramsDerangedAnagrams.java:30: error: incompatible types: String cannot be converted to Number
            out = out + ((Number)arr.get(i)).doubleValue();
                                        ^
/tmp/TestMochiToJavaanagrams-deranged-anagrams1873416534/001/AnagramsDerangedAnagrams.java:63: error: cannot find symbol
            for (String c : m.get(k).keySet()) {
                                    ^
  symbol:   method keySet()
  location: interface List<String>
Note: /tmp/TestMochiToJavaanagrams-deranged-anagrams1873416534/001/AnagramsDerangedAnagrams.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
